# HTRaQuyetDinh

./: .gitignore  ACB_10Y.csv  DSS - Chứng sỹ.docx  copy_of_đồ_án_dss_nhóm_1.py
python_project_template/: AI_BUTTON_UPDATE_SUMMARY.md  GEMINI_AI_INTEGRATION_SUMMARY.md  GETTING_STARTED.md  ITERATION_SUMMARY.md  Makefile  PROJECT_COMPLETION_SUMMARY.md  PROJECT_STATUS.md  QUICK_START.md  README.md  README_OLD.md  UI_FIXES_SUMMARY.md  UI_IMPROVEMENTS_SUMMARY.md  advanced_model_integration_example.py  debug_ai_button.py  debug_preprocessor.py  debug_upload_error.py  forecast_vn30_AllIndicators_XGBoost (final).csv  ml_integration.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.sh  start.bat  start.sh  test_acb_upload.py  test_advanced_forecaster.py  test_all_demos.py  test_app_full.py  test_button_functionality.py  test_complete_system.py  test_csv_simple.py  test_exact_app_process.py  test_final_fixes.py  test_fixes.py  test_forecast_demo.py  test_forecaster_debug.py  test_gemini_api.py  test_gemini_integration.py  test_real_data.py  test_reset_removal_and_popups.py  (+14 more)
python_project_template/data/: DATA_SETUP_GUIDE.md  Dữ liệu Lịch sử USD_VND.csv  Gold_sample.csv  Gold_sample_new.csv  USD_VND_sample.csv  USD_VND_sample_new.csv  VN30_demo.csv  dữ liệu lịch sử giá vàng.csv
python_project_template/docs/: simple_ml_integration_guide.md
python_project_template/docs/development/: AI_HTML_TAGS_FIX_SUMMARY.md  ERROR_MESSAGE_UPDATE_SUMMARY.md  FIX_SUMMARY.md  FORECAST_DEMO_SUMMARY.md  POPUP_MESSAGES_SUMMARY.md  STOCK_PRICE_DISPLAY_FIX_SUMMARY.md  SVR_INDEX_DISPLAY_FIX_SUMMARY.md
python_project_template/examples/: demo_reference_implementation.py
python_project_template/results/: forecast_vn30_SVR_summary.csv
python_project_template/src/stock_predictor/: __init__.py  app.py  (+5 more)
(+18 files in other folders)
