[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stock-market-prediction"
version = "1.0.0"
description = "Predicting stock market index using fusion of machine learning techniques"
authors = [
    {name = "Duong Thi Ngoc Dung", email = "dung@example.com"}
]
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "scikit-learn>=1.0.0",
    "matplotlib>=3.4.0",
    "seaborn>=0.11.0",
    "plotly>=5.0.0",
    "streamlit>=1.25.0",
    "yfinance>=0.2.0",
    "xgboost>=1.6.0",
    "lightgbm>=3.3.0",
    "tensorflow>=2.8.0",
    "keras>=2.8.0",
    "ta>=0.10.0",
    "statsmodels>=0.13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "mypy>=0.991",
]

[project.urls]
Homepage = "https://github.com/dungnhi/stock-market-prediction"
Repository = "https://github.com/dungnhi/stock-market-prediction.git"
Documentation = "https://stock-market-prediction.readthedocs.io"

[project.scripts]
stock-predict = "stock_predictor.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"